general config alignment fix

--- a/client/src/components/profile/NewProfileViews/GeneralConfig/NewProfileGeneralForm.scss
+++ b/client/src/components/profile/NewProfileViews/GeneralConfig/NewProfileGeneralForm.scss
@@ -36,6 +36,8 @@
 
 #certification-checkbox {
   top: 30px;
-
 }
 
+.align-list {
+  margin-top: 20px !important;
+}
